<resources>
    <string name="app_name">ATSoft</string>
    <string name="app_version_number">1.1</string>
    <string name="app_version">Phiên bản hiện tại</string>
    <string name="title_activity_login">Đăng nhập</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Tài khoản</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="action_register">Đăng ký</string>
    <string name="action_sign_in_short">CAFE</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Vui lòng nhập</string>
    <string name="error_not_connect_api">Không thể kết nối hệ thống. Vui lòng kiểm tra lại</string>
    <string name="enter_api_link">Nhập địa chỉ API</string>
    <string name="save">Lưu</string>
    <string name="success">Cập nhật thành công</string>
    <string name="area">Khu vực</string>
    <string name="room">Phòng bàn</string>
    <string name="add">Thêm</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="list_api">Danh sách các API:</string>
    <string name="oki">Xác nhận</string>
    <string name="char_split">;</string>
    <string name="area_empty_name">Tất cả</string>
    <string name="order">Order</string>
    <string name="pay">Thanh Toán</string>
    <string name="change_room">Chuyển</string>
    <string name="collect_room">Ghép</string>
    <string name="product_search">Nhập tên/mã sản phẩm</string>
    <string name="quantity">SL</string>
    <string name="stt">STT</string>
    <string name="price">Đơn giá</string>
    <string name="total">T. Tiền</string>
    <string name="total_money">Tổng Tiền</string>
    <string name="change_quantity">Số lượng</string>
    <string name="delete">Xóa</string>
    <string name="add_note">Ghi chú</string>
    <string name="prioritize">Ưu tiên</string>
    <string name="all">Tất cả</string>
    <string name="room_empty">Bàn trống</string>
    <string name="room_usesd">Có khách</string>
    <string name="quantity_input">Nhập số lượng</string>
    <string name="quantity_change">Thay đổi số lượng</string>
    <string name="note_input">Nhập ghi chú</string>
    <string name="note_change">Thay đổi ghi chú</string>
    <string name="error_notify_room">Bàn hiện chưa order nên không thể thông báo</string>
    <string name="error_change_room">Bàn hiện chưa order nên không thể chuyển</string>
    <string name="error_collect_room">Bàn hiện chưa order nên không thể ghép</string>
    <string name="error_selected_room">Vui lòng chọn bàn</string>
    <string name="total_money_product">Tổng tiền hàng</string>
    <string name="sale">Giảm giá</string>
    <string name="customer_paid">Khách thanh toán</string>
    <string name="customer_pay">Khách cần trả</string>
    <string name="excess_cash">Tiền thừa khách trả</string>
    <string name="product_order">Món order</string>
    <string name="error_when_connection">Không thể kết nối hệ thống. Vui lòng đăng nhập lại</string>
    <string name="error_when_cash_paid">Tiền thanh toán phải lớn hơn hoặc bằng tiền cần trả</string>
    <string name="remember_me">Nhớ mật khẩu</string>
    <string name="logout">Đăng xuất</string>
    <string name="exit">Thoát</string>
    <string name="print_setting">Cấu hình máy in</string>
    <string name="notify">T. Báo</string>
    <string name="inbill">In bill</string>
    <string name="phone_layout">Giao diện điện thoại</string>
    <string name="shop_code">Mã quán</string>
    <string name="wailting_process">Chờ chế biến</string>
    <string name="complete_kitchen">Đang chế biến</string>
    <string name="area_list">Danh sách khu vực</string>
    <string name="select_all">Chọn tất cả</string>
    <string name="update_version">Cập nhật phiên bản</string>
    <string name="update_version_content">Đã có phiên bản mới </string>
    <string name="update_version_content2">Nhấn xác nhận để tiến hành cập nhật</string>
    <string name="download_wailting">Đang tải xuống. Vui lòng chờ</string>
    <string name="print_bill_success">In thành công</string>
    <string name="print_bill_not_connect_service">Không thể kết nối service in bill</string>
    <string name="title_activity_chart">ChartActivity</string>
    <string name="overview">Tổng quan</string>
    <string name="cashier">Thu ngân</string>
    <string name="kitchen">Nhà bếp</string>
    <string name="report">Báo cáo</string>
    <string name="orther">Khác</string>
    <string name="productList">DS hàng hóa</string>
    <string name="ketquabanhang">Kết quả bán hàng hôm nay</string>
    <string name="overview1">Doanh thu hôm nay</string>
    <string name="overview2">Số lượng khách hôm nay</string>
    <string name="branch_list">Danh sách chi nhánh</string>
    <string name="revenue">Doanh thu</string>
    <string name="profit">Lợi nhuận</string>
    <string name="time">Thời gian</string>
    <string name="today">Hôm nay</string>
    <string name="onweek">Tuần này</string>
    <string name="apiLink">Địa chỉ API hệ thống</string>
    <string name="apiList">Danh sách API</string>
    <string name="setting">Cấu hình</string>
    <string name="bydate">Theo ngày</string>
    <string name="fromdate">Từ ngày</string>
    <string name="todate">Đến ngày</string>
    <string name="cannot_connect_bill_printer">Không thể kết nối tới máy in bill</string>
    <string name="screenLandscape">Màn hình ngang</string>
    <string name="screenPortrait">Màn hình đứng</string>
    <string name="screenSetting">Chế độ màn hình</string>
</resources>
